k8s-hello-es.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-es-v1
  labels:
    app: hello-es
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-es
      version: v1
  template:
    metadata:
      labels:
        app: hello-es
        version: v1
    spec:
      containers:
      - name: hello-es
        image: docker-harbor.itv.qiyi.domain/tv-test/hello-es
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: hello-es
  labels:
    app: hello-es
    version: v1
spec:
  selector:
    app: hello-es
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
